<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/circlebinder_menu_home_open_official_site"
        android:title="@string/circlebinder_action_open_browser"
        android:orderInCategory="50"
        android:icon="@drawable/ic_action_event"
        android:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/circlebinder_menu_home_wish_me_luck"
        android:title="@string/circlebinder_navigation_wish_me_luck"
        android:orderInCategory="50"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="never"
        />

    <item
        android:id="@+id/circlebinder_menu_home_change_log"
        android:title="@string/circlebinder_navigation_change_log"
        android:orderInCategory="50"
        android:icon="@drawable/ic_action_read"
        android:showAsAction="never"
        />

    <item
        android:id="@+id/circlebinder_menu_home_about"
        android:title="@string/circlebinder_navigation_about"
        android:orderInCategory="50"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="never"
        />

</menu>